<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    tools:context=".Setting">

    <Switch
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/NightTheme"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/SettingSdeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/SettingSpeed"
        app:layout_constraintStart_toStartOf="@+id/theme"
        app:layout_constraintTop_toBottomOf="@+id/theme" />

    <CheckBox
        android:id="@+id/SettingHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/SettingHumidity"
        app:layout_constraintStart_toStartOf="@+id/SettingSdeed"
        app:layout_constraintTop_toBottomOf="@+id/SettingSdeed" />

</androidx.constraintlayout.widget.ConstraintLayout>