<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/icoWeather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/rain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city"
        android:layout_width="157dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:text="@string/city"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/icoWeather"
        app:layout_constraintTop_toTopOf="@+id/icoWeather"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/serchCity"
        android:layout_width="273dp"
        android:layout_height="51dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/find"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/icoWeather"
        app:layout_constraintStart_toStartOf="@+id/icoWeather" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/temp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/icoWeather"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:layout_constraintVertical_bias="0.518"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/icoWeather2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/rain"
        app:layout_constraintStart_toStartOf="@+id/icoWeather3"
        app:layout_constraintTop_toBottomOf="@+id/icoWeather3"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/city2"
        android:layout_width="157dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:text="@string/city"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/icoWeather2"
        app:layout_constraintTop_toTopOf="@+id/icoWeather2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/temperature2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/temp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/icoWeather3"
        app:layout_constraintStart_toStartOf="@+id/city3"
        app:layout_constraintTop_toBottomOf="@+id/city3" />

    <ImageView
        android:id="@+id/icoWeather3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/rain"
        app:layout_constraintStart_toStartOf="@+id/icoWeather"
        app:layout_constraintTop_toBottomOf="@+id/icoWeather" />

    <TextView
        android:id="@+id/city3"
        android:layout_width="157dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:text="@string/city"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/icoWeather3"
        app:layout_constraintTop_toTopOf="@+id/icoWeather3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/temperature3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/temp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/city2"
        app:layout_constraintTop_toBottomOf="@+id/city2" />

    <ImageView
        android:id="@+id/icoSetting"
        android:layout_width="51dp"
        android:layout_height="46dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city2" />

    <ImageView
        android:id="@+id/icoEnter"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/enter"
        app:layout_constraintStart_toEndOf="@+id/serchCity"
        app:layout_constraintTop_toTopOf="@+id/serchCity" />
</androidx.constraintlayout.widget.ConstraintLayout>